glib-macros/tests/closure_compiletest/06-closure-unsupported-property.stderr
error: unsupported capture attribute property `stronk`: only `rename_to` is supported
 --> tests/closure_compiletest/06-closure-unsupported-property.rs:4:23
  |
4 |     closure!(#[strong(stronk)] self.v, move || {});
  |                       ^^^^^^
